[package]
name = "RavenForge"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = {version = "0.37.0", features = ["bundled", "static-link"]}

[[bin]]
name = "RavenForge"
path = "src/main.rs"

[build-dependencies]
cmake = "0.1"

[package.metadata.vcpkg]
dependencies = ["sdl2"]
git = "https://github.com/microsoft/vcpkg"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }